src/script/frontend/c64-script-parser.c
/*
C64 Stream - An OBS Studio source plugin for Commodore 64 video and audio streaming
Copyright (C) 2025 Christian Gleissner

Licensed under the GNU General Public License v2.0 or later.
See <https://www.gnu.org/licenses/> for details.
*/

#include "c64-script.h"
#include "c64-script-token.h"
#include "c64-logging.h"

#include <ctype.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#define MACRO_LOG_PREFIX "[c64script-parser] "

// Parser state
typedef struct {
    c64script_tokenizer_t *tokenizer;
    c64script_token_t current;
    c64script_token_t previous;
    bool had_error;
    bool had_any_error;
    bool panic_mode;
    char error_msg[1024];
    int error_count; // Track number of errors reported
    int max_errors;  // Maximum errors before stopping (0 = unlimited)
    bool log_errors;
} parser_t;

// Forward declarations
static c64script_ast_node_t *statement(parser_t *p);
static c64script_ast_node_t *dim_statement(parser_t *p);
static c64script_ast_node_t *function_def_statement(parser_t *p);
static void error(parser_t *p, const char *message);
static c64script_ast_expr_t *expression(parser_t *p);
static void free_expr(c64script_ast_expr_t *expr);
// HTTP <method> <url> [HEADERS <expr>] [BODY <expr>] [STATUS <var>] [RESPONSE <var>]
static c64script_ast_node_t *declaration(parser_t *p);

static c64script_token_t peek_token(parser_t *p)
{
    return c64script_tokenizer_peek(p->tokenizer);
}

static char *dup_upper(const char *start, size_t length)
{
    char *out = malloc(length + 1);
    if (!out) {
        return NULL;
    }
    for (size_t i = 0; i < length; i++) {
        out[i] = (char)toupper((unsigned char)start[i]);
    }
    out[length] = '\0';
    return out;
}

static bool token_matches_ci(const c64script_token_t *tok, const char *text)
{
    size_t len = strlen(text);
    if (tok->length != len) {
        return false;
    }
    for (size_t i = 0; i < len; i++) {
        if (tolower((unsigned char)tok->start[i]) != tolower((unsigned char)text[i])) {
            return false;
        }
    }
    return true;
}

static char *dup_token_text(const c64script_token_t *tok)
{
    if (!tok || !tok->start || tok->length == 0) {
        return NULL;
    }
    char *out = malloc(tok->length + 1);
    if (!out) {
        return NULL;
    }
    memcpy(out, tok->start, tok->length);
    out[tok->length] = '\0';
    return out;
}

static bool parse_uint32_decimal_token(const c64script_token_t *tok, uint32_t *out_value)
{
    if (!tok || !out_value) {
        return false;
    }

    if (tok->length == 0) {
        return false;
    }

    uint64_t value = 0;
    for (size_t i = 0; i < tok->length; i++) {
        char c = tok->start[i];
        if (c < '0' || c > '9') {
            return false;
        }
        value = value * 10u + (uint64_t)(c - '0');
        if (value > UINT32_MAX) {
            return false;
        }
    }

    *out_value = (uint32_t)value;
    return true;
}

static bool token_can_be_bare_label(const c64script_token_t *tok)
{
    if (!tok || !tok->start || tok->length == 0) {
        return false;
    }

    unsigned char first = (unsigned char)tok->start[0];
    return isalpha(first) || first == '_';
}

static bool token_can_be_implicit_keyword_label(const c64script_token_t *tok)
{
    return tok && tok->type == TOKEN_START;
}

static char *dup_normalized_label_from_number(const c64script_token_t *tok)
{
    uint32_t value = 0;
    if (!parse_uint32_decimal_token(tok, &value)) {
        return NULL;
    }

    char buf[32];
    int written = snprintf(buf, sizeof(buf), "%u", value);
    if (written < 0 || (size_t)written >= sizeof(buf)) {
        return NULL;
    }

    return strdup(buf);
}

static char *decode_string_literal(parser_t *p, const c64script_token_t *tok)
{
    if (!tok || tok->type != TOKEN_STRING || tok->length < 2) {
        error(p, "Invalid string literal");
        return NULL;
    }

    const char *in = tok->start + 1;
    size_t in_len = tok->length - 2;

    char *out = malloc(in_len + 1);
    if (!out) {
        error(p, "Out of memory");
        return NULL;
    }

    size_t out_len = 0;
    for (size_t i = 0; i < in_len; i++) {
        char c = in[i];

        if (c == '"' && (i + 1) < in_len && in[i + 1] == '"') {
            out[out_len++] = '"';
            i++;
            continue;
        }

        if (c != '\\') {
            out[out_len++] = c;
            continue;
        }

        if ((i + 1) >= in_len) {
            free(out);
            error(p, "Unterminated escape sequence");
            return NULL;
        }

        char esc = in[++i];
        switch (esc) {
        case '\\':
            out[out_len++] = '\\';
            break;
        case '"':
            out[out_len++] = '"';
            break;
        case 'r':
            out[out_len++] = '\r';
            break;
        case 'n':
            out[out_len++] = '\n';
            break;
        case 't':
            out[out_len++] = '\t';
            break;
        case 'x': {
            if ((i + 2) >= in_len) {
                free(out);
                error(p, "Invalid hex escape (expected \\xNN)");
                return NULL;
            }
            char h1 = in[++i];
            char h2 = in[++i];
            int v1 = isxdigit((unsigned char)h1) ? (isdigit((unsigned char)h1) ? (h1 - '0') : (tolower(h1) - 'a' + 10))
                                                 : -1;
            int v2 = isxdigit((unsigned char)h2) ? (isdigit((unsigned char)h2) ? (h2 - '0') : (tolower(h2) - 'a' + 10))
                                                 : -1;
            if (v1 < 0 || v2 < 0) {
                free(out);
                error(p, "Invalid hex escape (expected \\xNN)");
                return NULL;
            }
            out[out_len++] = (char)((v1 << 4) | v2);
            break;
        }
        default:
            free(out);
            error(p, "Unknown escape sequence");
            return NULL;
        }
    }

    out[out_len] = '\0';
    return out;
}

// ============================================================================
// ERROR HANDLING
// ============================================================================

static bool c64script_debug_logging_enabled(void)
{
    if (c64_debug_logging) {
        return true;
    }
    const char *env = getenv("C64SCRIPT_DEBUG_LOGS");
    if (!env || env[0] == '\0' || strcmp(env, "0") == 0) {
        return false;
    }
    return true;
}

static void error_at(parser_t *p, c64script_token_t *token, const char *message)
{
    if (p->panic_mode)
        return;

    // Stop reporting errors if we've hit the limit
    if (p->max_errors > 0 && p->error_count >= p->max_errors) {
        return;
    }

    p->panic_mode = true;
    p->had_error = true;
    p->had_any_error = true;
    p->error_count++;

    snprintf(p->error_msg, sizeof(p->error_msg), "[Line %d:%d] Error at '%.*s': %s", token->line, token->column,
             (int)token->length, token->start, message);
    if (p->log_errors) {
        blog(LOG_ERROR, "%s", p->error_msg);
    } else if (c64script_debug_logging_enabled()) {
        blog(LOG_DEBUG, "%s", p->error_msg);
    }

    // If we've hit the error limit, add a final message
    if (p->max_errors > 0 && p->error_count >= p->max_errors) {
        if (p->log_errors) {
            blog(LOG_ERROR, "Error limit reached (%d errors), stopping parse", p->max_errors);
        } else if (c64script_debug_logging_enabled()) {
            blog(LOG_DEBUG, "Error limit reached (%d errors), stopping parse", p->max_errors);
        }
    }
}

static void error(parser_t *p, const char *message)
{
    error_at(p, &p->previous, message);
}

static void error_at_current(parser_t *p, const char *message)
{
    error_at(p, &p->current, message);
}

// ============================================================================
// TOKEN MANAGEMENT
// ============================================================================

static void advance(parser_t *p)
{
    p->previous = p->current;

    for (;;) {
        p->current = c64script_tokenizer_next(p->tokenizer);
        if (p->current.type != TOKEN_ERROR)
            break;

        error_at_current(p, p->current.start);
    }
}

static bool check(parser_t *p, c64script_token_type_t type)
{
    return p->current.type == type;
}

static bool match(parser_t *p, c64script_token_type_t type)
{
    if (!check(p, type))
        return false;
    advance(p);
    return true;
}

static void consume(parser_t *p, c64script_token_type_t type, const char *message)
{
    if (p->current.type == type) {
        advance(p);
        return;
    }
    error_at_current(p, message);
}

static void synchronize(parser_t *p)
{
    p->panic_mode = false;

    // Don't synchronize if we've hit the error limit
    if (p->max_errors > 0 && p->error_count >= p->max_errors) {
        return;
    }

    while (p->current.type != TOKEN_EOF) {
        if (p->previous.type == TOKEN_NEWLINE)
            return;

        switch (p->current.type) {
        case TOKEN_IF:
        case TOKEN_FOR:
        case TOKEN_WHILE:
        case TOKEN_GOTO:
        case TOKEN_GOSUB:
        case TOKEN_RETURN:
        case TOKEN_LET:
        case TOKEN_STOP:
        case TOKEN_END:
            return;
        default:; // Do nothing
        }

        advance(p);

        // Stop synchronizing if we hit the error limit during advance
        if (p->max_errors > 0 && p->error_count >= p->max_errors) {
            return;
        }
    }
}

// ============================================================================
// EXPRESSION PARSING (Pratt parser with proper precedence)
// ============================================================================

typedef enum {
    PREC_NONE,
    PREC_OR,         // OR
    PREC_XOR,        // XOR
    PREC_AND,        // AND
    PREC_EQUALITY,   // = == <> !=
    PREC_COMPARISON, // < <= > >=
    PREC_TERM,       // + -
    PREC_FACTOR,     // * /
    PREC_UNARY,      // NOT - +
    PREC_CALL,       // ()
    PREC_PRIMARY
} precedence_t;

typedef c64script_ast_expr_t *(*parse_fn_t)(parser_t *p, bool can_assign);

typedef struct {
    parse_fn_t prefix;
    parse_fn_t infix;
    precedence_t precedence;
} parse_rule_t;

static c64script_ast_expr_t *parse_precedence(parser_t *p, precedence_t precedence);
static parse_rule_t *get_rule(c64script_token_type_t type);

// Number literal
static c64script_ast_expr_t *number(parser_t *p, bool can_assign)
{
    (void)can_assign;
    c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
    if (!expr)
        return NULL;
    expr->type = AST_EXPR_NUMBER;
    expr->line = p->previous.line;
    if (p->previous.type == TOKEN_DURATION) {
        expr->as.number = (double)p->previous.value.duration_ms;
    } else {
        expr->as.number = p->previous.value.number;
    }
    return expr;
}

// String literal
static c64script_ast_expr_t *string(parser_t *p, bool can_assign)
{
    (void)can_assign;
    c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
    if (!expr)
        return NULL;
    expr->type = AST_EXPR_STRING;
    expr->line = p->previous.line;
    if (p->previous.type == TOKEN_STRING) {
        expr->as.string = decode_string_literal(p, &p->previous);
    } else {
        expr->as.string = dup_token_text(&p->previous);
        if (!expr->as.string) {
            error(p, "Out of memory");
        }
    }
    if (!expr->as.string) {
        free(expr);
        return NULL;
    }
    return expr;
}

static c64script_ast_expr_t *keyword_string(parser_t *p, bool can_assign)
{
    (void)can_assign;

    c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
    if (!expr)
        return NULL;
    expr->type = AST_EXPR_STRING;
    expr->line = p->previous.line;
    expr->as.string = dup_upper(p->previous.start, p->previous.length);
    if (!expr->as.string) {
        error(p, "Out of memory");
        free(expr);
        return NULL;
    }
    return expr;
}

// Identifier or function name
// Detects array assignment vs function call by peeking ahead
static c64script_ast_expr_t *variable(parser_t *p, bool can_assign)
{
    c64script_token_t ident_token = p->previous;
    char *name = dup_upper(ident_token.start, ident_token.length);

    // Check for array access: identifier(expr)
    if (match(p, TOKEN_LPAREN)) {
        // Decide whether this is array access or function call
        // If the pattern is: identifier(expr) = ..., it's array assignment
        // Otherwise, it's a function call

        bool found_assignment = false;
        if (can_assign) {
            // Create a clone tokenizer for lookahead (doesn't affect parser state)
            c64script_tokenizer_t lookahead_tokenizer = *p->tokenizer;

            // Scan ahead to find matching ) and check if = follows
            int paren_depth = 1;

            while (paren_depth > 0) {
                c64script_token_t t = c64script_tokenizer_next(&lookahead_tokenizer);
                if (t.type == TOKEN_EOF) {
                    break;
                }
                if (t.type == TOKEN_LPAREN) {
                    paren_depth++;
                } else if (t.type == TOKEN_RPAREN) {
                    paren_depth--;
                    if (paren_depth == 0) {
                        // Check if next token is =
                        c64script_token_t next = c64script_tokenizer_peek(&lookahead_tokenizer);
                        if (next.type == TOKEN_EQ) {
                            found_assignment = true;
                        }
                    }
                }
            }
        }

        if (found_assignment) {
            // Parse as array access
            c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
            if (!expr) {
                free(name);
                return NULL;
            }
            expr->type = AST_EXPR_ARRAY_ACCESS;
            expr->line = ident_token.line;
            expr->as.array_access.name = name;
            expr->as.array_access.index = expression(p);

            consume(p, TOKEN_RPAREN, "Expected ')' after array index");
            if (p->panic_mode) {
                free_expr(expr);
                return NULL;
            }

            return expr;
        } else {
            // Parse as function call
            c64script_ast_expr_t **args = NULL;
            size_t arg_count = 0;
            size_t arg_capacity = 0;

            if (!check(p, TOKEN_RPAREN)) {
                arg_capacity = 4;
                args = malloc(arg_capacity * sizeof(c64script_ast_expr_t *));
                if (!args) {
                    free(name);
                    return NULL;
                }

                do {
                    if (arg_count >= arg_capacity) {
                        arg_capacity *= 2;
                        c64script_ast_expr_t **new_args = realloc(args, arg_capacity * sizeof(c64script_ast_expr_t *));
                        if (!new_args) {
                            for (size_t i = 0; i < arg_count; i++) {
                                free_expr(args[i]);
                            }
                            free(args);
                            free(name);
                            return NULL;
                        }
                        args = new_args;
                    }

                    args[arg_count++] = expression(p);
                } while (match(p, TOKEN_COMMA));
            }

            consume(p, TOKEN_RPAREN, "Expected ')' after arguments");
            if (p->panic_mode) {
                for (size_t i = 0; i < arg_count; i++) {
                    free_expr(args[i]);
                }
                free(args);
                free(name);
                return NULL;
            }

            // Function call
            c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
            if (!expr) {
                for (size_t i = 0; i < arg_count; i++) {
                    free_expr(args[i]);
                }
                free(args);
                free(name);
                return NULL;
            }
            expr->type = AST_EXPR_CALL;
            expr->line = ident_token.line;
            expr->as.call.name = name;
            expr->as.call.args = args;
            expr->as.call.arg_count = arg_count;
            return expr;
        }
    }

    // Check for map access: identifier{expr}
    if (match(p, TOKEN_LBRACE)) {
        c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
        if (!expr) {
            free(name);
            return NULL;
        }
        expr->type = AST_EXPR_MAP_ACCESS;
        expr->line = ident_token.line;
        expr->as.map_access.name = name;
        expr->as.map_access.key = expression(p);

        consume(p, TOKEN_RBRACE, "Expected '}' after map key");
        if (p->panic_mode) {
            free_expr(expr);
            return NULL;
        }

        return expr;
    }

    // Simple identifier
    c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
    if (!expr) {
        free(name);
        return NULL;
    }
    expr->type = AST_EXPR_IDENTIFIER;
    expr->line = ident_token.line;
    expr->as.identifier = name;
    return expr;
}

// Grouping: (expression)
static c64script_ast_expr_t *grouping(parser_t *p, bool can_assign)
{
    (void)can_assign;
    c64script_ast_expr_t *expr = expression(p);
    consume(p, TOKEN_RPAREN, "Expected ')' after expression");
    return expr;
}

// Unary: - NOT
static c64script_ast_expr_t *unary(parser_t *p, bool can_assign)
{
    (void)can_assign;
    c64script_token_type_t op_type = p->previous.type;
    c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
    if (!expr)
        return NULL;
    expr->type = AST_EXPR_UNARY;
    expr->line = p->previous.line;

    // Parse operand
    expr->as.unary.operand = parse_precedence(p, PREC_UNARY);

    // Determine operator
    switch (op_type) {
    case TOKEN_MINUS:
        expr->as.unary.op = EXPR_OP_NEGATE;
        break;
    case TOKEN_NOT:
        expr->as.unary.op = EXPR_OP_NOT;
        break;
    default:
        error(p, "Invalid unary operator");
        break;
    }

    return expr;
}

// Binary operators
static c64script_ast_expr_t *binary(parser_t *p, bool can_assign)
{
    (void)can_assign;
    c64script_token_type_t op_type = p->previous.type;

    // Get the rule for this operator to determine precedence
    parse_rule_t *rule = get_rule(op_type);

    // Compile right operand with higher precedence
    c64script_ast_expr_t *left_temp = NULL; // Will be set from context
    c64script_ast_expr_t *right = parse_precedence(p, (precedence_t)(rule->precedence + 1));

    c64script_ast_expr_t *expr = calloc(1, sizeof(c64script_ast_expr_t));
    if (!expr)
        return NULL;
    expr->type = AST_EXPR_BINARY;
    expr->line = p->previous.line;
    expr->as.binary.left = left_temp; // Need to track this properly
    expr->as.binary.right = right;

    // Map token to operator
    switch (op_type) {
    case TOKEN_PLUS:
        expr->as.binary.op = EXPR_OP_ADD;
        break;
    case TOKEN_MINUS:
        expr->as.binary.op = EXPR_OP_SUBTRACT;
        break;
    case TOKEN_MULTIPLY:
        expr->as.binary.op = EXPR_OP_MULTIPLY;
        break;
    case TOKEN_DIVIDE:
        expr->as.binary.op = EXPR_OP_DIVIDE;
        break;
    case TOKEN_EQ:
    case TOKEN_EQ_EQ:
        expr->as.binary.op = EXPR_OP_EQ;
        break;
    case TOKEN_NE:
    case TOKEN_NE_ALT:
        expr->as.binary.op = EXPR_OP_NE;
        break;
    case TOKEN_LT:
        expr->as.binary.op = EXPR_OP_LT;
        break;
    case TOKEN_LE:
        expr->as.binary.op = EXPR_OP_LE;
        break;
    case TOKEN_GT:
        expr->as.binary.op = EXPR_OP_GT;
        break;
    case TOKEN_GE:
        expr->as.binary.op = EXPR_OP_GE;
        break;
    case TOKEN_AND:
        expr->as.binary.op = EXPR_OP_AND;
        break;
    case TOKEN_XOR:
        expr->as.binary.op = EXPR_OP_XOR;
        break;
    case TOKEN_OR:
        expr->as.binary.op = EXPR_OP_OR;
        break;
    default:
        error(p, "Unknown operator");
        break;
    }

    return expr;
}

// Marker function for Pratt call handling. Calls are handled explicitly in parse_precedence()
// so this function should never be invoked directly.
static c64script_ast_expr_t *call(parser_t *p, bool can_assign)
{
    (void)p;
    (void)can_assign;
    return NULL;
}
